探索戰鬥計算
探索戰鬥計算

--- a/np.css
+++ b/np.css
@@ -18,9 +18,17 @@ tfoot {
     color: #fff;
 }
 
+.teamColor{
+	background-color:deepskyblue;
+}
+
+.deadColor{
+	background-color:black;
+}
+
 .iconBlack{
 	padding: 0px;
-	height: 10;
+	height: 10px;
 }
 
 .icon{
